# contortionist

./: .gitignore  Pipfile  contortionist.db  new_v1.sqlite  pyproject.toml  setup.cfg  setup.py  smtpd.py
contortionist/: __init__.py  architecture.txt  config.py  daemon.py  db.py  exceptions.py  mail_store_controller.py  purity_db.sqlite
mail_purity/: daemon.py  delete_me.py
tests/: test_aiosqlite.py  test_mail_store_controller.py
