[tool.poetry]
name = "contortionist"
version = "0.1.0"
description = ""
authors = ["Michael Caley <mjcaley@darkarctic.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aiosmtpd = "^1.2"
aiosmtplib = "^1.0"
aiofiles = "^0.4.0"
aiospamc = "^0.4.1"
tomlkit = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
